contrast fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -220,7 +220,7 @@ body{
     width: 100%;
     height: auto;
     margin: 0 auto;
-    color:#f7f7f7;
+    color:black;
     transition: ease-in-out 1s;
   }
 
